@@ -4,3 +4,4 @@ Version 0.2.X - Release date 2007-??-??
 - Relative basedir in build.xml
 - Use JAVA_HOME environment variable for ant build java dependencies. Example from shell: JAVA_HOME=/usr/lib/jvm/java-1.5.0-sun ant all
 - All files created during the make process are now in .cvsignore
+- INF pointer type is now 64-bit (long) for AMD64 support
